# typer-app

./: LICENSE  README.md  netbot.py  pyproject.toml
scripts/: hello.py
