[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "netbot"
authors = [{name = "aaron huff", email = "aaronthuff@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["typer[all] == 0.9.0"]
include = ["scripts"]

[project.urls]
Home = "https://github.com/aaronhuff"
